# emon

./: README-jis.txt  TODO.jis
doc/: dspcap.txt  specification.txt
src/: .gitignore  Makefile  Makefile.in  acinclude.m4  aclocal.m4  aucodec.c  aucodec.h  aucodec_dvi4.c  aucodec_l8l16.c  aucodec_pcmu.c  audiocapt  audiocapt.c  audiocaptplay  audiocaptplay.c  audioplay  audioplay.c  capture.c  capture.h  compat.h  config.h  config.h.in  config.status  configure  configure.in  debug.c  debug.h  decoder_buf.c  decoder_buf.h  def_value.h  fec_decode.c  fec_decode.h  fecdec  fecdec.c  fecenc  fecenc.c  filerepeat  filerepeat.c  jpegcapt  jpegcapt.c  jpegcat  (+45 more)
src/autom4te.cache/: output.0  requests  traces.0
src/compat/: getaddrinfo.c  getnameinfo.c  net_addrcmp.c
src/jpegbuf/: Makefile  bufio.c  bufio.h  jbufdst.c  jbufsrc.c  jmemsrc.c
src/vaio/: Makefile  avi.c  avi.h  capture_vaio.c  capture_vaio.h  command.c  display.c  dump.c  jpegcapt_vaio.c  mchip.c  mchip.h  pci.c  pci.h  pci_freebsd.c  pci_netbsd.c  proto.h  ptable.c  sonypi.c  timer.c  videomem.c  yuv.c
test/: README-jis.txt  audioloopback  dtmfpad  dtmftest  notasipcall  notasipcall2  notasipwait  rtpmic  rtpmic.shell  rtpspkr
test/dtmf/: dtmf_0.8k16b1chraw  dtmf_1.8k16b1chraw  dtmf_2.8k16b1chraw  dtmf_3.8k16b1chraw  dtmf_4.8k16b1chraw  dtmf_5.8k16b1chraw  dtmf_6.8k16b1chraw  dtmf_7.8k16b1chraw  dtmf_8.8k16b1chraw  dtmf_9.8k16b1chraw  dtmf_e.8k16b1chraw  dtmf_f.8k16b1chraw  gentonefilebypvftool.sh
